[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy_kohya_trainers"
version = "0.0.1"
description = "A collection of custom nodes for ComfyUI"
authors = [
  {name = "test_node_py", email = "laptise@live.jp"}
]
readme = "README.md"
license = {text = "Not open source"}
classifiers = []
dependencies = [
    "mlvault",
    "datasets",
    "git+https://github.com/kohya-ss/sd-scripts.git"
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting
    "mlvault"
]

[project.urls]
bugs = "https://github.com/ml-vault/comfy-lora-trainers/issues"
homepage = "https://github.com/yoonsookim/comfy-lora-trainers"


[tool.comfy]
PublisherId = "your_github_username"
DisplayName = "My Custom Nodepack"
Icon = ""

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src", "tests"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
